--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lib/**/*"
   ],
   "devDependencies": {
+    "shx": "^0.3.4",
     "typescript": "^4.8.4"
   },
   "packageManager": "pnpm@7.13.4"
