--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf ./lib",
+    "clean": "shx rm -rf ./lib",
     "prebuild": "pnpm clean",
     "build": "pnpm build:cjs && pnpm build:esm",
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
     "build:esm": "tsc -p ./tsconfig.esm.json",
-    "postbuild:esm": "mv lib/esm/index.js lib/esm/index.mjs",
+    "postbuild:esm": "shx mv lib/esm/index.js lib/esm/index.mjs",
     "prepack": "pnpm build"
   },
   "type": "module",
