--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
           cache: pnpm
-      - run: pnpm ci
+      - run: pnpm i
 
   publish-npm:
     needs: build
