--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0-dev",
   "description": "test package",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xsfunc/npm-publish.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "shx rm -rf ./lib",
